--- a/css/components/btn.scss
+++ b/css/components/btn.scss
@@ -8,7 +8,7 @@
     text-decoration: none;
     display: inline-block;
     border: none;
-
+    cursor: pointer;
 
     &--theme--yellow {
         background: #FEDB3F;
