--- a/css/components/order-section.scss
+++ b/css/components/order-section.scss
@@ -1,5 +1,5 @@
 .order-section {
-    background: url('./images/bg/surfer.png') center top 25% / cover no-repeat;
+    background: url('/images/bg/surfer.png') center top 25% / cover no-repeat;
     background-color: #2B2B2B;
     height: 100vh;
     min-height: 650px;
