--- a/css/components/radio.scss
+++ b/css/components/radio.scss
@@ -10,7 +10,7 @@
             border-radius: 4px;
 
             &::before {
-                background: url('./images/Icons/daw.svg') center center / cover no-repeat;
+                background: url('/images/Icons/daw.svg') center center / cover no-repeat;
             }
         }
     }
