chenged paths again

--- a/css/components/hero.scss
+++ b/css/components/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    background: url('/images/bg/surfers.png') center bottom 25% / cover no-repeat;
+    background: url("../../images/bg/surfers.png") center bottom 25% / cover no-repeat;
     height: 100vh;
     min-height: 650px;
     color: #fff;
