--- a/css/components/hero.scss
+++ b/css/components/hero.scss
@@ -1,5 +1,6 @@
 .hero {
-    background: url("../../images/bg/surfers.png") center bottom 25% / cover no-repeat;
+    background: url("../images/bg/surfers.png") center bottom 25% / cover no-repeat;
+    background-color: #1968B1;
     height: 100vh;
     min-height: 650px;
     color: #fff;
