--- a/css/main.css
+++ b/css/main.css
@@ -411,7 +411,8 @@ img {
 }
 
 .hero {
-  background: url("../../images/bg/surfers.png") center bottom 25%/cover no-repeat;
+  background: url("../images/bg/surfers.png") center bottom 25%/cover no-repeat;
+  background-color: #1968B1;
   height: 100vh;
   min-height: 650px;
   color: #fff;
@@ -757,7 +758,7 @@ img {
 }
 
 .order-section {
-  background: url("../../images/bg/surfer.png") center top 25%/cover no-repeat;
+  background: url("../images/bg/surfer.png") center top 25%/cover no-repeat;
   background-color: #2B2B2B;
   height: 100vh;
   min-height: 650px;
@@ -844,7 +845,7 @@ img {
   border-radius: 4px;
 }
 .radio--checkbox .radio__visible::before {
-  background: url("../../images/Icons/daw.svg") center center/cover no-repeat;
+  background: url("../images/Icons/daw.svg") center center/cover no-repeat;
 }
 
 .radio__elem {
