--- a/css/components/order-section.scss
+++ b/css/components/order-section.scss
@@ -6,8 +6,22 @@
     color: #fff;
     font-weight: normal;
     position: relative;
+
+    &::before {
+        content: "";
+        background: #2B2B2B;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 100%;
+        height: 100%;
+        transform: translate(-50%, -50%);
+        opacity: .6;
+    }
 }
 
 .order-section__title {
     color: #fff;
+    position: relative;
+    z-index: 1;
 }
