--- a/css/main.css
+++ b/css/main.css
@@ -766,15 +766,31 @@ img {
   font-weight: normal;
   position: relative;
 }
+.order-section::before {
+  content: "";
+  background: #2B2B2B;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  opacity: 0.6;
+}
 
 .order-section__title {
   color: #fff;
+  position: relative;
+  z-index: 1;
 }
 
 .form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
+  z-index: 1;
 }
 
 .form__col {
