--- a/scss/components/reviews.scss
+++ b/scss/components/reviews.scss
@@ -2,7 +2,6 @@
     background: #F8FAF9;
     padding: 41px 40px 41px;
     margin-bottom: 15px;
-    margin-right: 85px;
 }
 
 .reviews__display-inner {
@@ -23,12 +22,12 @@
 .reviews__content {
     flex: 1;
     margin-left: 40px;
+    padding-top: 24px;
 }
 
 .reviews__title {
     font-size: 27px;
     font-weight: bold;
-    margin-top: 24px;
     margin-bottom: 12px;
     color: #292929;
 }
