--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,17 +2,19 @@ $containerWidth: 940px;
 $baseFontSize: 18px;
 
 //colors
-
+$yellow: #FEDB3F;
+$yellow2: #FFD517;
+$black: #292929;
 
 //z-indexes
 $z-fixed-menu:100;
 
 
 //normalize
-@import "./layout/normalize.scss";
+@import "./normalize.scss";
 
 //setups
-@import "./layout/layout.scss";
+@import "./layout.scss";
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300;400;700&display=swap');
 
 //components
