--- a/scss/components/benefits.scss
+++ b/scss/components/benefits.scss
@@ -8,7 +8,7 @@
     position: relative;
 
     &::before {
-        content: url("../../images/Icons/separator.png");
+        content: url("../images/Icons/separator.png");
         position: absolute;
         top: 55px;
         right: 0;
