--- a/scss/components/btn.scss
+++ b/scss/components/btn.scss
@@ -11,11 +11,11 @@
     cursor: pointer;
 
     &--theme--yellow {
-        background: #FEDB3F;
+        background: $yellow;
         color: #000;
 
         &:hover {
-            background: #FFD517;
+            background: $yellow2;
             color: #000;
         }
     }
@@ -27,7 +27,7 @@
         color: #fff;
 
         &:hover {
-            color: #FEDB3F;
+            color: $yellow;
         }
     }
 
