--- a/scss/components/form.scss
+++ b/scss/components/form.scss
@@ -48,4 +48,13 @@
 .form__controls {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 20px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.form__controls-radio {
+    margin-right: 12px;
 }
