--- a/scss/components/radio.scss
+++ b/scss/components/radio.scss
@@ -8,7 +8,7 @@
     @include radio;
 
     &--checkbox {
-        margin-bottom: 50px;
+        // margin-bottom: 50px;
         
         .radio__visible {
             border-radius: 4px;
