--- a/css/main.css
+++ b/css/main.css
@@ -207,7 +207,7 @@ button:-moz-focusring,
 [type=button]:-moz-focusring,
 [type=reset]:-moz-focusring,
 [type=submit]:-moz-focusring {
-  outline: 1px dotted ButtonText;
+  outline: 0.0555555556rem dotted ButtonText;
 }
 
 /**
@@ -281,7 +281,7 @@ textarea {
 [type=search] {
   -webkit-appearance: textfield;
   /* 1 */
-  outline-offset: -2px;
+  outline-offset: -0.1111111111rem;
   /* 2 */
 }
 
@@ -335,13 +335,26 @@ template {
   display: none;
 }
 
+html {
+  font-size: 18px;
+}
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 17px;
+  }
+}
+@media screen and (max-width: 480px) {
+  html {
+    font-size: 16px;
+  }
+}
+
 html,
 body {
   height: 100%;
 }
 
 body {
-  font-size: 18px;
   font-family: "Alegreya Sans", Arial, Helvetica, sans-serif;
   line-height: 1.42;
   -webkit-font-smoothing: antialiased;
@@ -353,14 +366,15 @@ body {
 .wrapper {
   position: relative;
   width: 100%;
-  min-width: 960px;
   min-height: 100%;
   overflow: hidden;
 }
 
 .container {
-  width: 940px;
+  width: 95%;
+  max-width: 940px;
   margin: 0 auto;
+  position: relative;
 }
 
 h1,
@@ -403,6 +417,7 @@ footer {
 a {
   color: inherit;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 img {
@@ -414,14 +429,54 @@ img {
   background: url("../images/bg/surfers.png") center bottom 25%/cover no-repeat;
   background-color: #1968B1;
   height: 100vh;
-  min-height: 650px;
+  min-height: 36.1111111111rem;
   color: #fff;
   font-weight: bold;
   position: relative;
 }
+@media screen and (max-width: 768px) {
+  .hero {
+    background: url("../../images/bg/bg-tablet-surfers.png") center top 90px/100% 100% no-repeat;
+    background-color: #1968B1;
+  }
+}
+@media screen and (max-width: 480px) {
+  .hero {
+    background-size: cover;
+  }
+}
 
 .hero__title-section {
   width: 46%;
+}
+@media screen and (max-width: 768px) {
+  .hero__title-section {
+    width: 100%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    padding-top: 5.5555555556rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero__icons-section {
+    display: none;
+  }
 }
 
 .hero__container {
@@ -436,53 +491,70 @@ img {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 100%;
-  padding: 24px 0 45px 0;
+  padding: 1.3333333333rem 0 2.5rem 0;
 }
 
 .hero__main-title {
-  font-size: 48px;
+  font-size: 2.6666666667rem;
   line-height: 1.2;
   font-weight: bold;
-  margin-bottom: 15px;
+  margin-bottom: 0.8333333333rem;
   text-transform: uppercase;
+}
+@media screen and (max-width: 480px) {
+  .hero__main-title {
+    font-size: 2.2222222222rem;
+    line-height: 2rem;
+  }
+}
+@media screen and (max-width: 360px) {
+  .hero__main-title {
+    font-size: 1.7777777778rem;
+  }
 }
 
 .hero__title-desc {
-  font-size: 21px;
-  margin-bottom: 57px;
+  font-size: 1.1666666667rem;
+  margin-bottom: 3.1666666667rem;
   font-weight: normal;
+}
+@media screen and (max-width: 480px) {
+  .hero__title-desc {
+    font-size: 1rem;
+  }
+}
+@media screen and (max-width: 360px) {
+  .hero__title-desc {
+    font-size: 0.8888888889rem;
+  }
 }
 
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-
-.menu__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+@media screen and (max-width: 768px) {
+  .header {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
-.menu__item {
-  margin-right: 15px;
-}
-.menu__item:last-child {
-  margin-right: 0;
+.logo {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .phone-number {
-  font-size: 24px;
+  font-size: 1.3333333333rem;
   text-decoration: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -493,9 +565,57 @@ img {
 }
 
 .phone-number__icon {
-  width: 12px;
-  height: 12px;
-  margin-right: 6px;
+  width: 0.6666666667rem;
+  height: 0.6666666667rem;
+  margin-right: 0.3333333333rem;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.phone-number__text {
+  white-space: nowrap;
+}
+
+@media screen and (max-width: 768px) {
+  .header__phone-number {
+    display: none;
+  }
+}
+
+.menu {
+  margin: 0 1.6666666667rem;
+  padding-top: 0.2777777778rem;
+}
+@media screen and (max-width: 768px) {
+  .menu {
+    display: none;
+  }
+}
+
+.menu__list {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.menu__item {
+  margin-right: 0.8333333333rem;
+  margin-bottom: 0.5555555556rem;
+}
+.menu__item:last-child {
+  margin-right: 0;
+}
+
+.menu__link {
+  text-decoration: none;
 }
 
 .features {
@@ -505,7 +625,7 @@ img {
 }
 
 .features__item {
-  margin-right: 46px;
+  margin-right: 2.5555555556rem;
 }
 .features__item:last-child {
   margin-right: 0;
@@ -518,21 +638,21 @@ img {
 }
 
 .feature__icon {
-  width: 45px;
-  margin-right: 7px;
+  width: 2.5rem;
+  margin-right: 0.3888888889rem;
 }
 
 .feature__text {
-  font-size: 16px;
-  max-width: 90px;
+  font-size: 0.8888888889rem;
+  max-width: 5rem;
 }
 
 .btn {
-  font-size: 16px;
+  font-size: 0.8888888889rem;
   font-weight: bold;
-  padding: 22px 40px;
+  padding: 1.2222222222rem 2.2222222222rem;
   text-transform: uppercase;
-  border-radius: 100px;
+  border-radius: 5.5555555556rem;
   line-height: 1;
   text-decoration: none;
   display: inline-block;
@@ -559,7 +679,7 @@ img {
 
 .section {
   height: 100vh;
-  min-height: 650px;
+  min-height: 36.1111111111rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -573,12 +693,22 @@ img {
 }
 
 .section__title {
-  font-size: 48px;
+  font-size: 2.6666666667rem;
   font-weight: bold;
-  margin-bottom: 60px;
+  margin-bottom: 3.3333333333rem;
   text-align: center;
   text-transform: uppercase;
   color: #292929;
+}
+@media screen and (max-width: 480px) {
+  .section__title {
+    font-size: 2.2222222222rem;
+  }
+}
+@media screen and (max-width: 360px) {
+  .section__title {
+    font-size: 1.7777777778rem;
+  }
 }
 
 .headline {
@@ -586,18 +716,41 @@ img {
 }
 
 .headline__title {
-  margin-bottom: 11px;
+  margin-bottom: 0.6111111111rem;
+}
+@media screen and (max-width: 480px) {
+  .headline__title {
+    font-size: 2.2222222222rem;
+  }
+}
+@media screen and (max-width: 360px) {
+  .headline__title {
+    font-size: 1.7777777778rem;
+  }
 }
 
 .headline__subtitle {
   padding: 0 27%;
-  margin-bottom: 42px;
+  margin-bottom: 2.3333333333rem;
+}
+@media screen and (max-width: 480px) {
+  .headline__subtitle {
+    padding: 0 5%;
+  }
 }
 
 .benefits {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+@media screen and (max-width: 480px) {
+  .benefits {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .benefits__item {
@@ -607,13 +760,24 @@ img {
   padding: 0 3%;
   position: relative;
 }
+@media screen and (max-width: 480px) {
+  .benefits__item {
+    padding: 0;
+    margin-bottom: 1.0555555556rem;
+  }
+}
 .benefits__item::before {
   content: url("../images/Icons/separator.png");
   position: absolute;
-  top: 55px;
+  top: 3.0555555556rem;
   right: 0;
   -webkit-transform: translateX(50%);
           transform: translateX(50%);
+}
+@media screen and (max-width: 768px) {
+  .benefits__item::before {
+    display: none;
+  }
 }
 .benefits__item:first-child {
   padding-left: 0;
@@ -628,15 +792,29 @@ img {
 .benefit {
   text-align: center;
 }
+@media screen and (max-width: 480px) {
+  .benefit {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: left;
+  }
+}
 
 .benefit__image {
-  margin-bottom: 12px;
+  margin-bottom: 0.6666666667rem;
+}
+@media screen and (max-width: 480px) {
+  .benefit__image {
+    margin-bottom: 0;
+    margin-right: 1.1111111111rem;
+  }
 }
 
 .benefit__image-wrapper {
   display: inline-block;
-  width: 126px;
-  height: 126px;
+  width: 7rem;
+  height: 7rem;
   position: relative;
   background: #F2F5F4;
   border-radius: 50%;
@@ -644,8 +822,8 @@ img {
 }
 
 .benefit__icon {
-  height: 68px;
-  width: 68px;
+  height: 3.7777777778rem;
+  width: 3.7777777778rem;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -655,20 +833,25 @@ img {
 
 .benefit__title {
   font-weight: bold;
-  font-size: 27px;
-  margin-bottom: 17px;
+  font-size: 1.5rem;
+  margin-bottom: 0.9444444444rem;
   color: #292929;
 }
 
 .benefit__desc {
   color: #666666;
-  line-height: 22px;
+  line-height: 1.2222222222rem;
+}
+@media screen and (max-width: 480px) {
+  .benefit__desc {
+    padding-right: 5%;
+  }
 }
 
 .reviews__display {
   background: #F8FAF9;
-  padding: 41px 40px 41px;
-  margin-bottom: 15px;
+  padding: 2.2777777778rem 2.2222222222rem 2.2777777778rem;
+  margin-bottom: 0.8333333333rem;
 }
 
 .reviews__display-inner {
@@ -676,10 +859,29 @@ img {
   display: -ms-flexbox;
   display: flex;
 }
+@media screen and (max-width: 768px) {
+  .reviews__display-inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 
 .reviews__avatar {
-  width: 254px;
-  height: 262px;
+  width: 14.1111111111rem;
+  height: 14.5555555556rem;
+}
+@media screen and (max-width: 768px) {
+  .reviews__avatar {
+    width: 7.3888888889rem;
+    height: 7.2222222222rem;
+    margin: 1.0555555556rem 0 0.8888888889rem 0;
+  }
 }
 
 .reviews__avatar-img {
@@ -693,25 +895,35 @@ img {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-left: 40px;
-  padding-top: 24px;
+  margin-left: 2.2222222222rem;
+  padding-top: 1.3333333333rem;
 }
 
 .reviews__title {
-  font-size: 27px;
+  font-size: 1.5rem;
   font-weight: bold;
-  margin-bottom: 12px;
+  margin-bottom: 0.6666666667rem;
   color: #292929;
 }
 
 .reviews__text {
-  margin-bottom: 25px;
-  line-height: 22px;
+  margin-bottom: 1.3888888889rem;
+  line-height: 1.2222222222rem;
+}
+@media screen and (max-width: 768px) {
+  .reviews__text {
+    margin-bottom: 0;
+  }
 }
 
 .reviews__name {
   color: #292929;
   font-weight: bold;
+}
+@media screen and (max-width: 768px) {
+  .reviews__name {
+    margin-bottom: 1.2777777778rem;
+  }
 }
 
 .reviews__switcher {
@@ -724,9 +936,9 @@ img {
 }
 
 .interactive-avatar {
-  width: 80px;
-  height: 80px;
-  border: 6px solid transparent;
+  width: 4.4444444444rem;
+  height: 4.4444444444rem;
+  border: 0.3333333333rem solid transparent;
   border-radius: 50%;
   overflow: hidden;
   position: relative;
@@ -753,14 +965,14 @@ img {
 }
 
 .section__review-title {
-  margin-bottom: 30px;
+  margin-bottom: 1.6666666667rem;
 }
 
 .order-section {
   background: url("../images/bg/surfer.png") center top 25%/cover no-repeat;
   background-color: #2B2B2B;
   height: 100vh;
-  min-height: 650px;
+  min-height: 36.1111111111rem;
   color: #fff;
   font-weight: normal;
   position: relative;
@@ -783,6 +995,11 @@ img {
   position: relative;
   z-index: 1;
 }
+@media screen and (max-width: 768px) {
+  .order-section__title {
+    margin-bottom: 1.5rem;
+  }
+}
 
 .form {
   display: -webkit-box;
@@ -791,29 +1008,63 @@ img {
   position: relative;
   z-index: 1;
 }
+@media screen and (max-width: 768px) {
+  .form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 17%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .form {
+    padding: 0;
+  }
+}
 
 .form__col {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-right: 20px;
+  margin-right: 1.1111111111rem;
 }
 .form__col:last-child {
   margin-right: 0;
+}
+@media screen and (max-width: 768px) {
+  .form__col {
+    margin-right: 0;
+  }
 }
 
 .form__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 20px;
+  margin-bottom: 1.1111111111rem;
+}
+@media screen and (max-width: 768px) {
+  .form__row {
+    margin-bottom: 0.8888888889rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .form__row--margin-bottom__decrease {
+    margin-bottom: 0.8888888889rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .form__row--margin-bottom__rise {
+    margin-bottom: 22px;
+  }
 }
 
 .form__block {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-right: 20px;
+  margin-right: 1.1111111111rem;
 }
 .form__block:last-child {
   margin-right: 0;
@@ -821,18 +1072,29 @@ img {
 
 .form__input {
   width: 100%;
-  border-radius: 4px;
-  padding: 18px 11px;
-  border: solid 3px transparent;
+  border-radius: 0.2222222222rem;
+  padding: 1rem 0.6111111111rem;
+  border: solid 0.1666666667rem transparent;
 }
 .form__input--textarea {
-  height: 170px;
+  height: 9.4444444444rem;
   resize: none;
-  margin-bottom: 18px;
+  margin-bottom: 1rem;
+}
+@media screen and (max-width: 768px) {
+  .form__input--textarea {
+    height: 4.6666666667rem;
+    margin-bottom: 0;
+  }
 }
 .form__input:focus {
   border-color: #FEDB3F;
   outline: none;
+}
+@media screen and (max-width: 768px) {
+  .form__input {
+    padding: 0.2777777778rem 0;
+  }
 }
 
 .form__controls {
@@ -841,17 +1103,45 @@ img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-bottom: 20px;
+  margin-bottom: 1.1111111111rem;
 }
 .form__controls:last-child {
   margin-bottom: 0;
 }
+@media screen and (max-width: 768px) {
+  .form__controls {
+    margin-bottom: 1.3333333333rem;
+  }
+}
 .form__controls--margin-bottom__increase {
-  margin-bottom: 70px;
+  margin-bottom: 3.8888888889rem;
+}
+@media screen and (max-width: 768px) {
+  .form__controls--margin-bottom__increase {
+    margin-bottom: 2.1666666667rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .form__controls {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .form__controls-radio {
-  margin-right: 12px;
+  margin-right: 0.6666666667rem;
+}
+
+@media screen and (max-width: 768px) {
+  .form__btns {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .radio {
@@ -865,7 +1155,7 @@ img {
           user-select: none;
 }
 .radio--checkbox .radio__visible {
-  border-radius: 4px;
+  border-radius: 0.2222222222rem;
 }
 .radio--checkbox .radio__visible::before {
   background: url("../images/Icons/daw.svg") center center/cover no-repeat;
@@ -879,16 +1169,16 @@ img {
 }
 
 .radio__visible {
-  width: 25px;
-  height: 25px;
+  width: 1.3888888889rem;
+  height: 1.3888888889rem;
   position: relative;
   border-radius: 50%;
   background: #fff;
 }
 .radio__visible:before {
   content: "";
-  width: 13px;
-  height: 13px;
+  width: 0.7222222222rem;
+  height: 0.7222222222rem;
   background: #FEDB3F;
   border-radius: 50%;
   position: absolute;
@@ -900,7 +1190,7 @@ img {
 }
 
 .radio__title {
-  margin-left: 10px;
+  margin-left: 0.5555555556rem;
 }
 
 .fixed-menu {
@@ -911,25 +1201,25 @@ img {
 }
 
 .fixed-menu__item {
-  margin-bottom: 5px;
+  margin-bottom: 0.2777777778rem;
 }
 .fixed-menu__item--active .fixed-menu__link {
   border-color: #fff;
 }
 
 .fixed-menu__link {
-  width: 18px;
-  height: 18px;
+  width: 1rem;
+  height: 1rem;
   border-radius: 50%;
-  border: 1px solid transparent;
+  border: 0.0555555556rem solid transparent;
   display: block;
   position: relative;
 }
 .fixed-menu__link::before {
   content: "";
   display: block;
-  width: 7px;
-  height: 7px;
+  width: 0.3888888889rem;
+  height: 0.3888888889rem;
   border-radius: 50%;
   background: #fff;
   position: absolute;
@@ -937,4 +1227,106 @@ img {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+}
+
+.hamburger {
+  width: 1.3888888889rem;
+  height: 1.2777777778rem;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .hamburger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.hamburger__plank {
+  display: block;
+  background: #fff;
+  height: 0.2777777778rem;
+  border-radius: 0.5555555556rem;
+}
+
+.map-section {
+  background: url("../images/bg/map.png") center center/cover no-repeat;
+  position: relative;
+}
+
+.footer {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 1.5555555556rem 0;
+  background: #fff;
+}
+
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media screen and (max-width: 480px) {
+  .footer__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.contacts {
+  font-size: 1.1666666667rem;
+  font-style: normal;
+}
+@media screen and (max-width: 480px) {
+  .contacts {
+    margin-bottom: 0.5555555556rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.social__item {
+  margin-right: 0.7777777778rem;
+}
+
+.socials__icon {
+  width: 1.1111111111rem;
+  height: 1.1111111111rem;
 }
