--- a/scss/components/headline.scss
+++ b/scss/components/headline.scss
@@ -1,12 +1,27 @@
+
+
 .headline {
     text-align: center;
 }
 
 .headline__title {
-    margin-bottom: 11px;
+    margin-bottom: rem(11px);
+
+    @include phones {
+        font-size: rem(40px);
+    }
+
+    @include old-phones {
+        font-size: rem(32px);
+    }
 }
 
 .headline__subtitle {
     padding: 0 27%;
-    margin-bottom: 42px;
+    margin-bottom: rem(42px);
+
+    @include phones {
+        padding: 0 5%;
+    }
+
 }
