--- a/scss/components/benefits.scss
+++ b/scss/components/benefits.scss
@@ -1,5 +1,9 @@
 .benefits {
     display: flex;
+
+    @include phones {
+        flex-direction: column;
+    }
 }
 
 .benefits__item {
@@ -7,12 +11,21 @@
     padding: 0 3%;
     position: relative;
 
+    @include phones {
+        padding: 0;
+        margin-bottom: rem(19px);
+    }
+
     &::before {
         content: url("../images/Icons/separator.png");
         position: absolute;
-        top: 55px;
+        top: rem(55px);
         right: 0;
         transform: translateX(50%);
+
+        @include tablets {
+            display: none;
+        }
     }
 
     &:first-child {
