--- a/scss/components/btn.scss
+++ b/scss/components/btn.scss
@@ -1,9 +1,9 @@
 .btn {
-    font-size: 16px;
+    font-size: rem(16px);
     font-weight: bold;
-    padding: 22px 40px;
+    padding: rem(22px) rem(40px);
     text-transform: uppercase;
-    border-radius: 100px;
+    border-radius: rem(100px);
     line-height: 1;
     text-decoration: none;
     display: inline-block;
