--- a/scss/components/form.scss
+++ b/scss/components/form.scss
@@ -2,25 +2,57 @@
     display: flex;
     position: relative;
     z-index: 1;
+
+    @include tablets {
+        flex-direction: column;
+        padding: 0 17%;
+    }
+
+    @include phones {
+        padding: 0;
+    }
 }
 
 .form__col {
     flex: 1;
-    margin-right: 20px;
+    margin-right: rem(20px);
 
     &:last-child {
+        margin-right: 0;
+    }
+
+    @include tablets {
         margin-right: 0;
     }
 }
 
 .form__row {
     display: flex;
-    margin-bottom: 20px;
+    margin-bottom: rem(20px);
+
+    @include tablets {
+        margin-bottom: rem(16px);
+    }
+
+    &--margin-bottom__decrease {
+        @include tablets {
+            margin-bottom: rem(16px);
+        }
+    }
+
+    &--margin-bottom__rise {
+
+        @include tablets {
+            margin-bottom: 22px;
+        }
+    }
+
 }
+
 
 .form__block {
     flex: 1;
-    margin-right: 20px;
+    margin-right: rem(20px);
 
     &:last-child {
         margin-right: 0;
@@ -29,36 +61,67 @@
 
 .form__input {
     width: 100%;
-    border-radius: 4px;
-    padding: 18px 11px;
-    border: solid 3px transparent;
+    border-radius: rem(4px);
+    padding: rem(18px) rem(11px);
+    border: solid rem(3px) transparent;
 
     &--textarea {
-        height: 170px;
+        height: rem(170px);
         resize: none;
-        margin-bottom: 18px;
+        margin-bottom: rem(18px);
+
+        @include tablets {
+            height: rem(84px);
+            margin-bottom: 0;
+        }
     }
 
     &:focus {
         border-color: #FEDB3F;
         outline: none;
     }
+
+    @include tablets {
+        padding: rem(5px) 0;
+    }
 }
 
 .form__controls {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 20px;
+    margin-bottom: rem(20px);
 
     &:last-child {
         margin-bottom: 0;
     }
 
-    &--margin-bottom__increase {
-        margin-bottom: 70px;
+    @include tablets {
+        margin-bottom: rem(24px);
     }
+
+    &--margin-bottom__increase {
+        margin-bottom: rem(70px);
+
+        @include tablets {
+            margin-bottom: rem(39px);
+        }
+    }
+
+    
+    @include phones  {
+        justify-content: center;
+    }
+
 }
 
 .form__controls-radio {
-    margin-right: 12px;
+    margin-right: rem(12px);
+}
+
+
+.form__btns {
+    @include tablets {
+        display: flex;
+        justify-content: center;
+    }
 }
