--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -1,31 +1,37 @@
 .header {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
-}
 
-.menu__list {
-    display: flex;
-    align-items: center;
-}
-
-.menu__item {
-    margin-right: 15px;
-
-    &:last-child {
-        margin-right: 0;
+    @include tablets {
+        align-items: center;
     }
 }
 
+.logo {
+    flex-shrink: 0;
+}
+
 .phone-number {
-    font-size: 24px;
+    font-size: rem(24px);
     text-decoration: none;
     display: flex;
     align-items: center;
 }
 
 .phone-number__icon {
-    width: 12px;
-    height: 12px;
-    margin-right: 6px;
+    width: rem(12px);
+    height: rem(12px);
+    margin-right: rem(6px);
+    flex-shrink: 0;
+}
+
+.phone-number__text {
+    white-space: nowrap;
+}
+
+.header__phone-number {
+    @include tablets {
+        display: none;
+    }
 }
