--- a/scss/components/hero.scss
+++ b/scss/components/hero.scss
@@ -2,34 +2,81 @@
     background: url("../images/bg/surfers.png") center bottom 25% / cover no-repeat;
     background-color: #1968B1;
     height: 100vh;
-    min-height: 650px;
+    min-height: rem(650px);
     color: #fff;
     font-weight: bold;
     position: relative;
+
+    @include tablets {
+        background: url("../../images/bg/bg-tablet-surfers.png") center top 90px / 100% 100% no-repeat;
+        background-color: #1968B1;  
+    }
+
+    @include phones {
+        background-size: cover;
+    }
 }
 
 .hero__title-section {
     width: 46%;
+
+    @include tablets {
+        width: 100%;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding-top: rem(100px);
+    }
+
+
 }
+
+.hero__icons-section {
+    @include tablets {
+        display: none;
+    }
+}
+
+
 
 .hero__container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-    padding: 24px 0 45px 0;
+    padding: rem(24px) 0 rem(45px) 0;
 }
 
 .hero__main-title {
-    font-size: 48px;
+    font-size: rem(48px);
     line-height: 1.2;
     font-weight: bold;
-    margin-bottom: 15px;
+    margin-bottom: rem(15px);
     text-transform: uppercase;
+
+    @include phones {
+        font-size: rem(40px);
+        line-height: rem(36px);
+    }
+
+    @include old-phones {
+        font-size: rem(32px);
+    }
 }
 
 .hero__title-desc {
-    font-size: 21px;
-    margin-bottom: 57px;
+    font-size: rem(21px);
+    margin-bottom: rem(57px);
     font-weight: normal;
+
+    @include phones {
+        font-size: rem(18px);
+    }
+
+    @include old-phones {
+        font-size: rem(16px);
+    }
 }
