--- a/scss/components/order-section.scss
+++ b/scss/components/order-section.scss
@@ -2,7 +2,7 @@
     background: url("../images/bg/surfer.png") center top 25% / cover no-repeat;
     background-color: #2B2B2B;
     height: 100vh;
-    min-height: 650px;
+    min-height: rem(650px);
     color: #fff;
     font-weight: normal;
     position: relative;
@@ -24,4 +24,8 @@
     color: #fff;
     position: relative;
     z-index: 1;
+
+    @include tablets {
+        margin-bottom: rem(27px);
+    }
 }
