--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,19 @@
 $containerWidth: 940px;
 $baseFontSize: 18px;
 
+
+//breakpoints
+$tablets: 768px;
+$phones: 480px;
+$old-phones: 360px;
+
+
 //colors
 $yellow: #FEDB3F;
 $yellow2: #FFD517;
 $black: #292929;
+
+@import "media";
 
 //z-indexes
 $z-fixed-menu:100;
@@ -20,6 +29,7 @@ $z-fixed-menu:100;
 //components
 @import "./components/hero.scss";
 @import "./components/header.scss";
+@import "./components/menu.scss";
 @import "./components/features.scss";
 @import "./components/feature.scss";
 @import "./components/btn.scss";
@@ -34,4 +44,11 @@ $z-fixed-menu:100;
 @import "./components/form.scss";
 @import "./components/radio.scss";
 @import "./components/fixed-menu.scss";
+@import "./components/hamburger.scss";
+@import "./components/map-section.scss";
+@import "./components/footer.scss";
+@import "./components/contacts.scss";
+@import "./components/socials.scss";
+
+
 
