--- a/scss/components/hero.scss
+++ b/scss/components/hero.scss
@@ -8,7 +8,7 @@
     position: relative;
 
     @include tablets {
-        background: url("../../images/bg/bg-tablet-surfers.png") center top 90px / 100% 100% no-repeat;
+        background: url("../images/bg/bg-tablet-surfers.png") center top 90px / 100% 100% no-repeat;
         background-color: #1968B1;  
     }
 
