--- a/css/main.css
+++ b/css/main.css
@@ -436,7 +436,7 @@ img {
 }
 @media screen and (max-width: 768px) {
   .hero {
-    background: url("../../images/bg/bg-tablet-surfers.png") center top 90px/100% 100% no-repeat;
+    background: url("../images/bg/bg-tablet-surfers.png") center top 90px/100% 100% no-repeat;
     background-color: #1968B1;
   }
 }
@@ -767,7 +767,7 @@ img {
   }
 }
 .benefits__item::before {
-  content: url("../images/Icons/separator.png");
+  content: url("../images/Icons/separator.svg");
   position: absolute;
   top: 3.0555555556rem;
   right: 0;
@@ -1199,6 +1199,11 @@ img {
   right: 4%;
   z-index: 100;
 }
+@media screen and (max-width: 768px) {
+  .fixed-menu {
+    display: none;
+  }
+}
 
 .fixed-menu__item {
   margin-bottom: 0.2777777778rem;
@@ -1261,7 +1266,6 @@ img {
 
 .map-section {
   background: url("../images/bg/map.png") center center/cover no-repeat;
-  position: relative;
 }
 
 .footer {
