--- a/scss/components/benefits.scss
+++ b/scss/components/benefits.scss
@@ -17,7 +17,7 @@
     }
 
     &::before {
-        content: url("../images/Icons/separator.png");
+        content: url("../images/Icons/separator.svg");
         position: absolute;
         top: rem(55px);
         right: 0;
